<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_stations"
            android:icon="@drawable/ic_list_24dp"
            android:title="@string/nav_item_stations" />

        <item
            android:id="@+id/nav_item_starred"
            android:icon="@drawable/ic_heart_black_24dp"
            android:title="@string/nav_item_starred" />

        <item
            android:id="@+id/nav_item_history"
            android:icon="@drawable/ic_restore_black_24dp"
            android:title="@string/nav_item_history" />

        <item
            android:id="@+id/nav_item_alarm"
            android:icon="@drawable/ic_access_alarms_black_24dp"
            android:title="@string/nav_item_alarm" />
    </group>

    <group
        android:id="@+id/group_settings_id"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_tune_24dp"
            android:title="@string/nav_item_settings" />
    </group>
</menu>