...
                    android:minWidth="50dp"
                    android:padding="5dp"
                    app:tint="?attr/iconsInItemBackgroundColor"
                    app:srcCompat="@drawable/ic_heart_24dp" />

            <ImageButton
                    android:id="@+id/buttonMore"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/image_button_more"
                    android:minWidth="50dp"
...
